# Stance

./: README.md  go.mod  go.sum  main.go
yield-stablecoin/contracts/liquidity_pool/: Cargo.toml
yield-stablecoin/contracts/liquidity_pool/test_snapshots/test/: deposit_amount_zero_should_panic.1.json  swap_reserve_one_nonzero_other_zero.1.json  test.1.json
yield-stablecoin/contracts/staking_yield/: Cargo.toml
yield-stablecoin/contracts/staking_yield/src/: lib.rs  token_interface.rs
yield-stablecoin/contracts/staking_yield/src/interface/: liquidity_pool.rs  mod.rs  token_custom.rs
yield-stablecoin/contracts/token/: Cargo.toml
yield-stablecoin/contracts/token/src/: admin.rs  contract.rs  lib.rs  storage_types.rs  test.rs
yield-stablecoin/contracts/token/test_snapshots/test/: burn_token.1.json  mint.1.json  mint_exact_cap.1.json  mint_exceeds_cap.1.json  mint_multiple_exceeds_cap.1.json  test_allowance_and_transfer_from.1.json  test_mint_and_transfer.1.json  test_token_flow.1.json
